Replace with nulls instead of removing to avoid size reduction